tests/lean/bad_error5.lean.expected.out
bad_error5.lean:9:0: error: _tactic._val_3: trying to evaluate sorry
